--- a/src/components/WorkWithTheBest/WorkWithTheBest.module.scss
+++ b/src/components/WorkWithTheBest/WorkWithTheBest.module.scss
@@ -1,25 +1,29 @@
 .wrapper {
-  height: 100%;
-  padding: 12px;
+  height: 200px;
+  padding: 0;
   margin: 0;
   border-radius: 12px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-
   color: #fff;
-  :global(.ant-card-body) {
-    height: 100%;
-    padding: 0;
+  margin-bottom: 12px;
+
+  .innerCard {
+    background-image: url('/images/info-card-bg.jpg');
+    padding: 12px;
+    border-radius: 12px;
+    color: #fff !important;
     display: flex;
     flex-direction: column;
+    justify-content: start;
     align-items: start;
-    justify-content: space-between;
-    .title {
-      flex: start;
-    }
-    button {
-      flex: end;
-      bottom: 0;
-      padding: 0;
-    }
+  }
+
+  .innerTitle {
+    color: #fff;
+  }
+
+  .innerButton {
+    @extend .innerTitle;
+    text-align: left;
   }
 }
